--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cerebrolusion.xyz – Civic Intelligence Presence</title>
+    <title>Civic Intelligence Presence</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
@@ -123,3 +123,4 @@
 
 </body>
 </html>
+
