--- a/20.html
+++ b/20.html
@@ -6,14 +6,14 @@
   <title>MetaGarden ??</title>
 
   <!-- ? CSS Layers (correct paths) -->
-  <link rel="stylesheet" href="/assets/css/tokens.css" />
-  <link rel="stylesheet" href="/assets/css/theme.css" />
-  <link rel="stylesheet" href="/assets/css/base.css" />
-  <link rel="stylesheet" href="/assets/css/typography.css" />
-  <link rel="stylesheet" href="/assets/css/layout.css" />
-  <link rel="stylesheet" href="/assets/css/utilities.css" />
-  <link rel="stylesheet" href="/assets/css/components.css" />
-  <link rel="stylesheet" href="/assets/css/animations.css" />
+  <link rel="stylesheet" href="assets/css/tokens.css" />
+  <link rel="stylesheet" href="assets/css/theme.css" />
+  <link rel="stylesheet" href="assets/css/base.css" />
+  <link rel="stylesheet" href="assets/css/typography.css" />
+  <link rel="stylesheet" href="assets/css/layout.css" />
+  <link rel="stylesheet" href="assets/css/utilities.css" />
+  <link rel="stylesheet" href="assets/css/components.css" />
+  <link rel="stylesheet" href="assets/css/animations.css" />
 
   <style>
     canvas { display: block; width: 100%; height: 100vh; }
@@ -44,10 +44,10 @@
 
   <!-- ?? Initialization Script -->
   <script type="module">
-    import * as THREE from '/assets/scripts/three.module.js';
-    import { DOM3DManager } from '/assets/scripts/web-3d.js';
-    import { ArchetypeEngine } from '/assets/scripts/archetypeEngine.js';
-    import { NarrativeEngine } from '/assets/scripts/narrativeEngine.js';
+    import * as THREE from 'assets/scripts/three.module.js';
+    import { DOM3DManager } from 'assets/scripts/web-3d.js';
+    import { ArchetypeEngine } from 'assets/scripts/archetypeEngine.js';
+    import { NarrativeEngine } from 'assets/scripts/narrativeEngine.js';
 
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
@@ -119,4 +119,5 @@
     animate();
   </script>
 </body>
+
 </html>
